# basyx-opcua-bridge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
charts/basyx-opcua-bridge/: Chart.yaml  values.yaml
charts/basyx-opcua-bridge/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
config/: bridge.e2e.yaml  bridge.yaml
docker/: Dockerfile  compose.e2e.yml
docker/basyx/: submodel-repo.properties
docker/opcua-simulator/: Dockerfile  server.py
examples/docker-compose/: README.md  compose.yml  prometheus.yml
examples/docker-compose/basyx/: submodel-repo.properties
examples/docker-compose/config/: bridge.yaml
examples/kubernetes/: bridge-config.yaml  deployment.yaml  kustomization.yaml  service.yaml
scripts/: e2e_down.sh  e2e_up.sh  setup_dev.sh  validate_aas_openapi.py
src/basyx_opcua_bridge/: __init__.py
src/basyx_opcua_bridge/aas/: __init__.py  events.py  providers.py
src/basyx_opcua_bridge/cli/: main.py
src/basyx_opcua_bridge/config/: __init__.py  models.py
src/basyx_opcua_bridge/core/: __init__.py  bridge.py  connection.py  exceptions.py
src/basyx_opcua_bridge/discovery/: __init__.py  workflow.py
src/basyx_opcua_bridge/mapping/: __init__.py  engine.py  type_converters.py
tests/: conftest.py
tests/e2e/: test_stack_contract.py
tests/integration/: test_connection.py  test_control.py  test_discovery.py  test_mqtt_event_e2e.py  test_sync.py
tests/unit/: test_aas_events.py  test_config.py  test_mapping_engine.py  test_type_converters.py
(+7 files in other folders)
